# litgpt-misalignment

./: LICENSE  pyproject.toml
litgpt/: __main__.py  adapter.py  config.py  utils.py
litgpt/data/: base.py  json_data.py
litgpt/eval/: adapter.py  adapter_v2.py  base.py
litgpt/finetune/: adapter.py  adapter_v2.py
litgpt/generate/: adapter.py  adapter_v2.py
